SW-8973 Fixed: Alignment of the listing options

--- a/engine/Shopware/Themes/Frontend/Responsive/frontend/_public/src/less/_modules/listing.less
+++ b/engine/Shopware/Themes/Frontend/Responsive/frontend/_public/src/less/_modules/listing.less
@@ -745,6 +745,7 @@
 
         .per-page--select {
             .unitize-width(80);
+	    text-align: center;
             vertical-align: top;
         }
     }
